fixing z-index for the logo

--- a/sites/all/themes/ds/css/style.css
+++ b/sites/all/themes/ds/css/style.css
@@ -2175,7 +2175,7 @@ body.admin-menu {
   position: absolute;
   top: -33px;
   left: -17px;
-  z-index: 998;
+  z-index: 400;
 }
 #site-name a {
   text-indent: -119988px;
