--- a/sites/all/themes/ds/sass/partials/07-layout-design/_design.sass
+++ b/sites/all/themes/ds/sass/partials/07-layout-design/_design.sass
@@ -78,7 +78,7 @@ body
   position: absolute
   top: -33px
   left: -17px
-  z-index: 998
+  z-index: 400
   a
     +replace-text-with-dimensions("ds-logo.png")
     display: block
